--- a/web/include/scene/menu/sprite/sprite_menu.html
+++ b/web/include/scene/menu/sprite/sprite_menu.html
@@ -55,69 +55,63 @@
       </div>
       <div class="mt-1">
         {{
-          editable_input(
-            id="sprite_menu_stroke",
-            label="Stroke Width",
-            type="number",
-            min=0,
-            max=1000,
-            small=1,
-            value=20,
-            action="v => update_sprite_details('stroke', v / 100)",
-            after=|
-              {{
-                dropdown_button(
-                  id="sprite_menu_cap_start",
-                  label="Start",
-                  secondary=1,
-                  small=1
-                )
-              }}
-              <ul class="dropdown-menu">
-                {{
-                  menu/sprite_dropdown_option(
-                    key="cap_start",
-                    name="Arrow",
-                    label='Arrow {{ bootstrap_icon(arrow-left) }}'
-                  )
-                }}
-                {{
-                  menu/sprite_dropdown_option(
-                    key="cap_start",
-                    name="Round",
-                    label='Round {{ bootstrap_icon(circle) }}'
-                  )
-                }}
-                {{ menu/sprite_dropdown_option(key="cap_start", name="None") }}
-              </ul>
-              {{
-                dropdown_button(
-                  id="sprite_menu_cap_end",
-                  label="End",
-                  secondary=1,
-                  small=1
-                )
-              }}
-              <ul class="dropdown-menu">
-                {{
-                  menu/sprite_dropdown_option(
-                    key="cap_end",
-                    name="Arrow",
-                    label='Arrow {{ bootstrap_icon(arrow-right) }}'
-                  )
-                }}
-                {{
-                  menu/sprite_dropdown_option(
-                    key="cap_end",
-                    name="Round",
-                    label='Round {{ bootstrap_icon(circle) }}'
-                  )
-                }}
-                {{ menu/sprite_dropdown_option(key="cap_end", name="None") }}
-              </ul>
-            |
+          scene/menu/stroke_input(
+            prefix="sprite_menu",
+            action="v => update_sprite_details('stroke', v)"
           )
-        }}  
+        }}
+      </div>
+      <div class="input-group input-group-sm mt-1">
+        {{
+          dropdown_button(
+            id="sprite_menu_cap_start",
+            label="Start",
+            secondary=1,
+            small=1
+          )
+        }}
+        <ul class="dropdown-menu">
+          {{
+            menu/sprite_dropdown_option(
+              key="cap_start",
+              name="Arrow",
+              label='Arrow {{ bootstrap_icon(arrow-left) }}'
+            )
+          }}
+          {{
+            menu/sprite_dropdown_option(
+              key="cap_start",
+              name="Round",
+              label='Round {{ bootstrap_icon(circle) }}'
+            )
+          }}
+          {{ menu/sprite_dropdown_option(key="cap_start", name="None") }}
+        </ul>
+        {{
+          dropdown_button(
+            id="sprite_menu_cap_end",
+            label="End",
+            secondary=1,
+            small=1
+          )
+        }}
+        <ul class="dropdown-menu">
+          {{
+            menu/sprite_dropdown_option(
+              key="cap_end",
+              name="Arrow",
+              label='Arrow {{ bootstrap_icon(arrow-right) }}'
+            )
+          }}
+          {{
+            menu/sprite_dropdown_option(
+              key="cap_end",
+              name="Round",
+              label='Round {{ bootstrap_icon(circle) }}'
+            )
+          }}
+          {{ menu/sprite_dropdown_option(key="cap_end", name="None") }}
+        </ul>
       </div>
       <div id="sprite_menu_shape" class="input-group mt-1">
         {{ dropdown_button(label="Shape", secondary=1, small=1) }}
@@ -166,13 +160,21 @@ function set_sprite_colour(colour) {
 
 }
 
-function set_visible(id, check) {
+function set_visible(id, check, enabled = null) {
     let el = document.getElementById(id);
     if (check) {
         el.style.display = "";
     }
     else {
         el.style.display = "none";
+    }
+
+    if (enabled !== null) {
+        if (enabled) {
+            el.disabled = false;
+        } else {
+            el.disabled = true;
+        }
     }
 }
 
@@ -199,8 +201,17 @@ function set_selected_sprite(sprite_json) {
     );
 
     set_visible("sprite_menu_shape", sprite.shape);
-    set_visible("sprite_menu_stroke", sprite.stroke !== null);
+    set_visible(
+        "sprite_menu_stroke",
+        sprite.stroke !== null,
+        sprite.stroke != 0.0
+    );
     set_visible("sprite_menu_stroke_label", sprite.stroke !== null);
+    set_visible("sprite_menu_solid_label", sprite.shape !== null);
+    set_visible("sprite_menu_solid_container", sprite.shape !== null);
+    document
+      .getElementById("sprite_menu_solid")
+      .checked = sprite.stroke === 0.0;
     set_visible("sprite_menu_cap_start", sprite.cap_start);
     set_visible("sprite_menu_cap_end", sprite.cap_end);
 }
