--- a/web/include/scene/menu/tools/tools_menu.html
+++ b/web/include/scene/menu/tools/tools_menu.html
@@ -56,15 +56,9 @@
       }}
       <div class="mt-1">
         {{
-          editable_input(
-            id="draw_menu_stroke",
-            label="Stroke Width",
-            type="number",
-            min=0,
-            max=1000,
-            small=1,
-            value=20,
-            action="v => update_draw_details('stroke', v / 100)",
+          scene/menu/stroke_input(
+            prefix="draw_menu",
+            action="v => update_draw_details('stroke', v)",
             noend=1
           )
         }}
