--- a/web/include/head_common.html
+++ b/web/include/head_common.html
@@ -4,5 +4,8 @@
 
 <!-- Bootstrap CSS -->
 {{ stylesheet(https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css) }}
+
+<!-- TODO host -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 {{ stylesheet(common.css) }}
 {{ javascript(common.js) }}
