--- a/web/include/page/float/start.html
+++ b/web/include/page/float/start.html
@@ -1,6 +1,7 @@
 <Page
   IFDEF(TITLE) {{ title="{{ TITLE }}" }}
   IFDEF(LOGGEDIN) {{ loggedin="" }}
+  IFDEF(REDIRECT) {{ redirect="{{ REDIRECT }}" }}
 >
   <div
     class="row justify-content-center align-items-center"
