--- a/web/include/header.html
+++ b/web/include/header.html
@@ -53,7 +53,7 @@ fetch('/api/auth/test', { method: 'POST' }).then(
     }}
     IFDEF(LOGGEDIN) {{
       if (!body.success) {
-        window.location.href = '/login';
+        window.location.href = '/login?backurl=' + window.location.pathname;
       }
     }}
   })
