move tools menu to rust

--- a/web/include/scene/menu/menu.html
+++ b/web/include/scene/menu/menu.html
@@ -17,10 +17,7 @@ function toggle_canvas_menu() {
         right: {{ constant(HOVER_ELEM_INSET) }};
     "
 >
-    <div class="accordion show" id="canvas_menu">
-        {{ scene/menu/tools/tools_menu.html }}
-        {{ scene/menu/sprite/sprite_menu.html }}
-    </div>      
+    <div class="accordion show" id="canvas_menu"></div>      
     <div class="btn-group-vertical">
         <button
           id="canvas_menu_button"
