add recent scenes to landing page

--- a/web/include/page/float/start.html
+++ b/web/include/page/float/start.html
@@ -7,5 +7,12 @@
     class="row justify-content-center align-items-center"
     style="height: 50vh;"
   >
-    <div class="col-sm-3 d-flex flex-column justify-content-end">
+    <div
+      class="
+        IFDEF(CLASS) {{ {{ CLASS }} }} ELSE {{ col-sm-3 }}
+        d-flex
+        flex-column
+        justify-content-end
+      "
+    >
 
