rework save workflow (auto save, ctrl+s)

--- a/web/include/scene/help_offcanvas.html
+++ b/web/include/scene/help_offcanvas.html
@@ -9,18 +9,6 @@
     </thead>
     <tbody>
       <tr>
-        <td>Space</td>
-        <td>Pan</td>
-      </tr>
-      <tr>
-        <td>Escape</td>
-        <td>
-          <span class="monospace">D</span>
-          then
-          <span class="monospace">Q</span>
-        </td>
-      </tr>
-      <tr>
         <td><span class="monospace">A</span></td>
         <td>Select all</td>
       </tr>
@@ -53,6 +41,10 @@
         <td>Rectangle</td>
       </tr>
       <tr>
+        <td><span class="monospace">S</span></td>
+        <td>Save</td>
+      </tr>
+      <tr>
         <td><span class="monospace">V</span></td>
         <td>Paste</td>
       </tr>
@@ -67,6 +59,18 @@
       <tr>
         <td><span class="monospace">Z</span></td>
         <td>Undo</td>
+      </tr>
+      <tr>
+        <td>Space</td>
+        <td>Pan</td>
+      </tr>
+      <tr>
+        <td>Escape</td>
+        <td>
+          <span class="monospace">D</span>
+          then
+          <span class="monospace">Q</span>
+        </td>
       </tr>
       <tr>
         <td><span class="monospace">+</span></td>
