--- a/web/include/projects/project.html
+++ b/web/include/projects/project.html
@@ -23,8 +23,8 @@
       <Button
         class="ms-auto"
         icon="arrow-up-right-square"
-        text="New scene"
-        href="/project/${project.uuid}/scene/new"
+        text="Edit"
+        href="/project/${project.uuid}"
       >
       <Button
         class="btn-danger ms-2"
