reworking scene editor to project model

--- a/web/include/projects/project.html
+++ b/web/include/projects/project.html
@@ -24,7 +24,7 @@
         class="ms-auto"
         icon="arrow-up-right-square"
         text="Edit"
-        href="/project/${project.uuid}"
+        href="/project/${project.uuid}/edit"
       >
       <Button
         class="btn-danger ms-2"
