--- a/web/include/projects/scene.html
+++ b/web/include/projects/scene.html
@@ -7,7 +7,7 @@
     <img
       class="card-img-top"
       style="max-height: 8rem; object-fit: cover;"
-      src="${scene.thumbnail}"
+      src="${scene.thumbnail || ''}"
     >
     <div class="card-body">
       <div class="input-group">
