--- a/web/include/head_common.html
+++ b/web/include/head_common.html
@@ -2,10 +2,10 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- Bootstrap CSS -->
+<!-- Bootstrap CSS and icons -->
 {{ stylesheet(https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css) }}
+{{ stylesheet(https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css) }}
 
-<!-- TODO host -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+<!-- Custom CSS and JS libraries -->
 {{ stylesheet(common.css) }}
 {{ javascript(common.js) }}
