--- a/web/include/head_common.html
+++ b/web/include/head_common.html
@@ -4,7 +4,9 @@
 
 <!-- Bootstrap CSS and icons -->
 {{ stylesheet(https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css) }}
-{{ stylesheet(https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css) }}
+{{ stylesheet(https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css) }}
+{{ rehost(https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/fonts/bootstrap-icons.woff:fonts) }}
+{{ rehost(https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/fonts/bootstrap-icons.woff2:fonts) }}
 
 <!-- Custom CSS and JS libraries -->
 {{ stylesheet(common.css) }}
